--- a/src/main/resources/templates/th/member/mypage/profile/myBoard.html
+++ b/src/main/resources/templates/th/member/mypage/profile/myBoard.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>질문 게시판</title>
+    <title></title>
 </head>
 
 <body>
