--- a/src/main/resources/templates/th/member/mypage/profile/noteSending.html
+++ b/src/main/resources/templates/th/member/mypage/profile/noteSending.html
@@ -2,11 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>질문 게시판</title>
+    <title>쪽지 보내기</title>
 </head>
-
 <body>
 
+<h2>쪽지 보내기</h2>
+
+<div class="container">
+    <div class="form-group">
+    <th:block th:text="${sending}"/>
+    </div>
+    <div class="form-group">
+        <textarea id="msgContents" name="msgContents" style="width: 700px"></textarea>
+    </div>
+
+    <input type="button" id="sending" name="sending" value="보내기"/>
 </div>
+
+
 </body>
 </html>
