--- a/src/main/resources/templates/th/admin/statAdmin/givePoint.html
+++ b/src/main/resources/templates/th/admin/statAdmin/givePoint.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<form action="/productDetails" method="get">
 
+<input type="hidden" name="productName" value="두번째">
+<input type="hidden" name="colorCode" value="002">
+<input type="hidden" name="qty" value=02>
+    <input type="submit">
+</form>
 </body>
 </html>
