--- a/src/main/resources/templates/th/admin/statAdmin/memberInfo.html
+++ b/src/main/resources/templates/th/admin/statAdmin/memberInfo.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/defaultLayout"
+      ><!---->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/mainContent.css}">
+        <link rel="stylesheet" th:href="@{/css/basket.css}">
+    </th:block>
 </head>
 <body>
-회원 정보
+<div layout:fragment="content">
+    회원 정보
+<table id="userTable">
+<thead>
+<tr>
+    <th>count</th>
+    <th>memberName</th>
+    <th>memberId</th>
+    <th>memberAddr</th>
+    <th>memberEmail</th>
+    <th>getOrderQty</th>
+    <th>getTotalPrice</th>
+</tr>
+</thead>
+<tbody>
+    <tr th:each="userInfo, userStat : ${userInfo}">
+        <td th:text="${userStat.count}">1</td>
+        <td th:text="${userInfo.memberName}">마</td>
+        <td th:text="${userInfo.memberId}">마</td>
+        <td th:text="${userInfo.memberAddr}">마</td>
+        <td th:text="${userInfo.memberEmail}">마</td>
+        <td th:text="${userInfo.orderListVO.getOrderQty()}">마</td>
+        <td th:text="${userInfo.orderListVO.getTotalPrice()}">마</td>
+
+    </tr>
+</tbody>
+</table>
+</div>
+
 </body>
 </html>
