--- a/src/main/resources/templates/th/admin/statAdmin/memberOrderList.html
+++ b/src/main/resources/templates/th/admin/statAdmin/memberOrderList.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 회원 주문내역
+<table id="userTable" border="1">
+    <thead>
+    <tr>
+        <th>count</th>
+        <th>orderNo</th>
+        <th>memberId</th>
+        <th>colorName</th>
+        <th>orderQty</th>
+        <th>totalPrice</th>
+        <th>recipient</th>
+        <th>orderAddr</th>
+        <th>orderDate</th><!--
+        <th>payCode</th>
+        <th>orderCode</th>-->
+
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="orderList, orderStat : ${orderList}">
+        <td th:text="${orderStat.count}">1</td>
+        <td th:text="${orderList.orderNo}">마</td>
+        <td th:text="${orderList.memberId}">마</td>
+        <td th:text="${orderList.colorName}">마</td>
+        <td th:text="${orderList.orderQty}">마</td>
+        <td th:text="${orderList.totalPrice}">마</td>
+        <td th:text="${orderList.recipient}">마</td>
+        <td th:text="${orderList.orderAddr}">마</td>
+        <td th:text="${orderList.orderDate}">마</td><!--
+        <td th:text="${orderList.payCode}">마</td>
+        <td th:text="${orderList.orderCode}">마</td>-->
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
