--- a/src/main/resources/templates/th/admin/statAdmin/statAdmin.html
+++ b/src/main/resources/templates/th/admin/statAdmin/statAdmin.html
@@ -12,12 +12,17 @@
             회사명 입력 <input type="text" value="" id="sellerName"> <!-- th:attr="onclick=|alert('${thingCertificate.certificateId}')|" -->
             <button name="sellerBtn" onsubmit="true" onclick="sellerBtn()" >제출</button>
             <br>
+            <h1> 회원관리 </h1>
             <a href="/spendingPattern">회원 소비 패턴</a><br>
             <a href="/memberInfo">회원 정보</a><br>
             <a href="/memberOrderList">회원 주문 내역</a><br>
             <a href="">채팅</a><br>
+            <h1> 제품관리 </h1>
             <a href="/productRegistration">제품 판매 등록 내역</a><br>
             <a href="/productManagement">제품 판매 관리</a><br>
+            <h1> 업체관리 </h1>
+            <a href="#"> 업체관리</a><br>
+            <a href="#">업체신청승인</a><br>
             <script>
                 function sellerBtn() {
                     var sellerName = document.getElementById("sellerName").value;
