--- a/src/main/resources/templates/th/member/payment/nonMemberPayment.html
+++ b/src/main/resources/templates/th/member/payment/nonMemberPayment.html
@@ -5,36 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<!--<link rel="stylesheet" media="screen"
-          href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/layout/application_react-c68374e516e05258989e1c408ec53ff0ffa468ef1755a945c31caf2e365af3d0.css">-->
-    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/7-e75c67c6.chunk.css">-->
-    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/19-dfb1ddc9.chunk.css">-->
-    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/App-11020a1b.css"> this is footer -->
-    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/16-82708389.chunk.css">-->
-   <!-- <link rel="stylesheet" media="screen"
-          href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/templates-Commerce-Cart-7a3e77c9.chunk.css">-->
-    <!--<link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v2/orders/pre_order-a9341d94d054b478694e31b559c91d4c6f9004f1819d278a88456fa32578bff9.css">-->
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
         <link rel="stylesheet" th:href="@{/css/basket.css}">
-
     </th:block>
 </head>
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script src="/resources/js/addressapi.js"></script>
 <body>
 
-<!--<div class="sticky-child layout-navigation-primary" style="position: fixed; left: 0px; right: 0px; top: 0px;">
-    <div class="layout-navigation-primary__content"><div class="layout-navigation-primary__leftmost">
-        <button class="layout-navigation-bar-icon layout-navigation-bar-drawer-button" title="메뉴" aria-label="메뉴" type="button"><
-            svg class="icon" width="24" height="24" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet"><path fill="currentColor
-" d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"></path></svg></button>
-    </div>
-        <div class="layout-navigation-primary__left"><a class=layout-navigation-logo layout-navigation__bar__logo aria-label="오늘의집" href="/"><svg class="icon" width="74" height="30" viewBox="0 0 74 30" preserveAspectRatio="xMidYMid meet"><g fill="none" fill-rule="evenodd"><path fill="#000" d="M14.2 25.17H9.28V20.7a1.45 1.45 0 0 0-2.9 0v4.47H1.44a1.45 1.45 0 1 0 0 2.9H14.2a1.45 1.45 0 0 0 0-2.9M4.5 9.15c0-4.6 2.08-5.28 3.33-5.28 1.24 0 3.33.69 3.33 5.28v.36c0 4.6-2.09 5.28-3.33 5.28-1.25 0-3.34-.69-3.34-5.28v-.36zm3.33 8.54c3.84 0 6.23-3.13 6.23-8.18v-.36c0-5.05-2.39-8.18-6.23-8.18-3.85 0-6.24 3.13-6.24 8.18v.36c0 5.05 2.39 8.19 6.24 8.19zm25.54-7.34H17.81a1.45 1.45 0 0 0 0 2.9h15.56a1.45 1.45 0 1 0 0-2.9m-1.55 15.5c-7.08 1.83-9.45.79-10.14.25-.45-.35-.65-.8-.65-1.48v-.87h10.25c.8 0 1.46-.65 1.46-1.45v-5.08c0-.8-.66-1.45-1.46-1.45h-11.7a1.45 1.45 0 1 0 0 2.9h10.25v2.18H19.57c-.8 0-1.45.65-1.45 1.45v2.32a4.6 4.6 0 0 0 1.78 3.78c1.2.93 2.94 1.39 5.21 1.39 2.05 0 4.54-.38 7.44-1.13a1.45 1.45 0 1 0-.73-2.82M20.3 7.83h10.8a1.45 1.45 0 1 0 0-2.9h-9.35V1.45a1.45 1.45 0 1 0-2.9 0v4.93c0 .8.65 1.45 1.45 1.45"></path><rect width="3" height="15" x="70" fill="#000" rx="1.5"></rect><path fill="#000" d="M64.5 13.28a1.45 1.45 0 0 0 2.73-1c-.05-.13-1-2.68-3.38-4.5l3.7-4.1a1.45 1.45 0 0 0-1.09-2.42h-9.05a1.45 1.45 0 1 0 0 2.9h5.8l-6.88 7.64a1.45 1.45 0 1 0 2.16 1.95l3.41-3.8a8 8 0 0 1 2.6 3.33M69.56 26.52h-7.01a.82.82 0 0 1-.82-.82v-1.95h8.65v1.95c0 .45-.37.82-.82.82m2.27-9.37c-.8 0-1.45.65-1.45 1.45v2.25h-8.65V18.6a1.45 1.45 0 1 0-2.9 0v7.1a3.73 3.73 0 0 0 3.72 3.72h7.01a3.73 3.73 0 0 0 3.72-3.72v-7.1c0-.8-.65-1.45-1.45-1.45M42.46 3.87c2.22 0 2.33 4.24 2.33 5.08 0 .85-.11 5.09-2.33 5.09-2.21 0-2.32-4.24-2.32-5.08 0-.86.11-5.09 2.32-5.09m0 13.07c1.76 0 3.23-.93 4.14-2.62.71-1.34 1.1-3.2 1.1-5.36s-.39-4.02-1.1-5.37A4.6 4.6 0 0 0 42.46.97c-1.76 0-3.22.93-4.13 2.62-.72 1.35-1.1 3.2-1.1 5.37s.38 4.01 1.1 5.36a4.59 4.59 0 0 0 4.13 2.62"></path><path fill="#000" d="M51.4.49c-.8 0-1.45.65-1.45 1.45v17.78c-1.93.6-5.75 1.13-10.38 1.13h-2.2a1.45 1.45 0 0 0 0 2.9h2.2c2.64 0 7.21-.23 10.38-1.02v4.84a1.45 1.45 0 0 0 2.9 0V1.94c0-.8-.65-1.45-1.45-1.45"></path></g></svg></a></div><nav class="layout-navigation-primary__menu"><a class="layout-navigation-primary__menu__item" href="/">커뮤니티</a><a class="layout-navigation-primary__menu__item" href="/store">스토어</a><a class="layout-navigation-primary__menu__item" href="/experts">인테리어시공</a></nav><div class="layout-navigation-primary__right"><div class="layout-navigation-bar-search"><div class="layout-navigation-search" id="id-1"><div class="layout-navigation-search__header"><div id="id-1-combobox" class="layout-navigation-search__combobox" role="combobox" aria-haspopup="listbox" aria-expanded="false"><div class="layout-navigation-search__input"><input type="text" class="layout-navigation-search__input__text" value="" autocomplete="off" size="1" id="id-1-input" aria-autocomplete="list" placeholder="오늘의집 통합검색" aria-label="오늘의집 통합검색"><svg class="layout-navigation-search__input__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" preserveAspectRatio="xMidYMid meet"><path d="M22 22l-5-5"></path><circle cx="11" cy="11" r="8"></circle></svg></div></div></div></div></div><a class="layout-navigation-bar-upload-button" href="/upload_select">글쓰기</a><button class="layout-navigation-bar-icon layout-navigation-bar-search-button" title="검색" aria-label="검색" type="button"><svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" preserveAspectRatio="xMidYMid meet"><path d="M22 22l-5-5"></path><circle cx="11" cy="11" r="8"></circle></svg></button><a class="layout-navigation-bar-icon" title="장바구니" aria-label="장바구니" href="/cart"><svg class="icon" width="24" height="24" viewBox="0 0 24 24" stroke="currentColor" fill="none" stroke-linejoin="round" stroke-width="2" preserveAspectRatio="xMidYMid meet"><path stroke-linecap="round" d="M4 5h18l-2.6 10.5a2 2 0 0 1-2 1.5H8.6a2 2 0 0 1-2-1.5L4 5zm4 15.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0zm7 0a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0z"></path><path d="M1 2h3v3"></path></svg><span class="layout-navigation-bar-icon__ticker">1</span></a><div class="layout-navigation-bar-login"><a class="layout-navigation-bar-login__item" href="/users/sign_in?redirect_to=%2Forders%2Fpre_order">로그인</a><a class="layout-navigation-bar-login__item" href="/normal_users/new">회원가입</a>
-        </div>
-        </div>
-    </div>
-</div>-->
 <div layout:fragment="content">
 
     <div id="body" class="orders pre_order" data-s_id="ad223c51bbde2a256a849d25cbb9b308" style="padding-bottom: 0px;">
@@ -47,17 +26,16 @@
         <div id="pre_order" class=" bucket" data-id="23159872" data-is-overseas-purchase="false">
 
 <!-- form --><form id="edit_order" class="edit_order" action="/kakaoPay" accept-charset="UTF-8" method="post">
-            <input type="hidden" name="memberId" value="${basket.memberId}"><br>
-            <input type="hidden" name="productNo" value="${basket.productNo}"><br>
-            <input type="hidden" name="colorName" value="${basket.productColor}"><br>
-            <input type="hidden" name="orderQty" value=""><br>
-            <input type="hidden" name="totalPrice" value=""><br>
-            <input type="hidden" name="usedPoint" value=""><br>
-            <input type="hidden" name="recipient" value=""><br>
-            <input type="hidden" name="orderAddr "value=""><br>
-            <input type="hidden" name="orderDate "value=""><br>
-            <input type="hidden" name="payCode" value=""><br>
-            <input type="hidden" name="orderCode" value=""><br>
+                <input type="hidden" name="memberId" value="이메일"><br>
+                <input type="hidden" name="productNo" value="${basket.productNo}"><br>
+                <input type="hidden" name="colorName" value="${basket.productColor}"><br>
+                <input type="hidden" name="orderQty" value=""><br>
+                <input type="hidden" name="totalPrice" value=""><br>
+                <input type="hidden" name="recipient" value=""><br>
+                <input type="hidden" name="orderAddr "value=""><br>
+                <input type="hidden" name="orderDate "value=""><br>
+                <input type="hidden" name="payCode" value=""><br>
+                <input type="hidden" name="orderCode" value=""><br>
 
 
                 <input name="utf8" type="hidden" value="✓"><input type="hidden" name="_method" value="patch"><input type="hidden" name="authenticity_token" value="ze6WpkSJXppVytsnsVCC/Rw4N/nrcPaUYMlh94aRzHT3RPv8LgoiclODhGPwB5YVSWDdbRpq+Khtuxdc5WbwSg==">
