--- a/src/main/resources/static/css/mainContent.css
+++ b/src/main/resources/static/css/mainContent.css
@@ -14,7 +14,34 @@
     -ms-flex: 1 0 0px;
     flex: 1 0 0px
 }
-
+.recommendItem__header__summary {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -moz-box-flex: 0;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    font-size: 13px;
+    color: #757575;
+}
+.recommendItem__header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    justify-content: space-between;
+    margin: -10px 0 10px;
+}
 .store-index-popular-items__detail-link {
     margin-right: 7px;
     color: #f77;
@@ -534,3 +561,26 @@
 /*    right: 0;*/
 /*    position: absolute;*/
 /*}*/
+
+ <!--채팅 아이콘 -->
+.fixed-btn-area {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    z-index: 100;
+    display: block
+}
+
+.fixed-btn-area .fixed-wrap {
+    position: relative;
+    float: left;
+    height: 60px;
+    border-radius: 30px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box
+}
+
+.fixed-btn-area .fixed-wrap .btn-tit {
+    padding: 20px 30px 24px
+}
+
