--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -68,7 +68,7 @@
                             </li>
 
                             <div class="nav-wrapper">
-                                <form class="form-inline ml-0 ml-md-3">
+                                <form class="form-inline ml-0 ml-md-3" action="/productions/searchlist" method="get">
                                     <div class="input-group input-group-sm">
                                         <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search"
                                                name="index" id="${index}" th:value="${index?:''}" onfocus="this.value=''">
