--- a/src/main/resources/templates/th/main/storeMain.html
+++ b/src/main/resources/templates/th/main/storeMain.html
@@ -32,7 +32,7 @@
             <div class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
                 <tr th:each="item : ${recommendList}">
                     <div class="col-6 col-md-3 product-item-wrap">
-                        <article class="production-item"><a class="production-item__overlay" href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
+                        <article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=${item.productNo})}"></a>
                             <div class="production-item-image production-item__image">
                                 <img class="image" alt="" th:src="@{'/uploadImg/'+${item.productMainImg}}" srcset="">
                             </div>
